--- a/styles_j.css
+++ b/styles_j.css
@@ -12,6 +12,9 @@ body {
     box-sizing: border-box;
 }
 
+h1{
+    margin: 0%;
+}
 
 #add-event{
     display: flex;
@@ -104,8 +107,29 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 20px;
     font-weight: bold;
     padding: 6px;
-    margin-bottom: 1%;
 }
+
+
+@media  (max-width:950px) {
+    #event-name , #event-date, #todaySdate{  
+    font-size: 12px;
+    width: 80%;
+    max-height: 15px;
+    padding:4px;
+    border-radius:4px;
+    }
+    #add-button, #reset-button{
+        font-size: 12px;
+        padding: 2px ;
+        border-radius:4px;
+    }
+    #div-button, #add-event, #todaySdate{
+        width: 90%;
+        border: none;
+    }
+} 
+
+
 
 
 
@@ -128,7 +152,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     
 }
 
-
 .Timeline-container {
     width: 85vw;
     max-width: 900px;
@@ -142,21 +165,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     box-shadow: 2px 8px 28px 10px #523202;
     
 }
-
-@media  (max-width:950px) {
-    #event-name , #event-date{  
-    width: 50%;
-    max-height: 15px;
-    padding:4px;
-    border-radius:4px;
-    }
-    #add-button, #reset-button{
-        font-size: 12px;
-        padding: 2px ;
-        border-radius:4px;
-    }
-} 
-
 
 
 
